Added python_app from Nirosh.

--- a/references/data_cleaner.ipynb
+++ b/references/data_cleaner.ipynb
@@ -903,41 +903,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: SQLAlchemy in c:\\programdata\\anaconda3\\lib\\site-packages (2.0.25)\n",
-      "Requirement already satisfied: pyodbc in c:\\programdata\\anaconda3\\lib\\site-packages (5.0.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from SQLAlchemy) (4.9.0)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from SQLAlchemy) (3.0.1)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+     "ename": "NameError",
+     "evalue": "name 'na_dropped_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[121], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Checking for duplicates\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m duplicate_data \u001b[38;5;241m=\u001b[39m na_dropped_data\u001b[38;5;241m.\u001b[39mduplicated()\n\u001b[0;32m      3\u001b[0m duplicate_data\u001b[38;5;241m.\u001b[39mvalue_counts()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'na_dropped_data' is not defined"
      ]
     }
    ],
    "source": [
-    "pip install SQLAlchemy pyodbc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sqlalchemy import create_engine\n",
-    "\n",
-    "server = 'localhost'\n",
-    "database = 'PythonLibrary'\n",
-    "username = 'Library'\n",
-    "password = 'Library1'\n",
-    "driver = 'ODBC Driver 17 for SQL Server'\n",
-    "\n",
-    "connection_string = f'mssql+pyodbc://{username}:{password}@{server}/{database}?driver={driver}'\n",
-    "engine = create_engine(connection_string)"
+    "# Checking for duplicates\n",
+    "duplicate_data = na_dropped_data.duplicated()\n",
+    "duplicate_data.value_counts()"
    ]
   }
  ],
